## Change history

### [2022/11/01]
* Workaround for bad DXF files that contain polyface with invalid geometry, they will be removed. 
* Workaround for bad DXF files that contains entities without handles. This may derive in unexpected side effects.
* Workaround for bad DXF files lacking BLOCK_RECORD tables for the defined blocks. The default block record values will be given what may have other side effects.
* Workaround for possible duplicate layers in layer states properties when reading a DXF.
* The Ellipse SetAxis method will automatically assign the larger axis value as the major axis and the lower as the minor axis.
* Added NET 6.0 as a target framework.
* Updated netDxf solution for Visual Studio 2022. The solution file is still usable by Visual Studio 2019 but it does not support NET 6.0.

### [2022/05/27]
* Added the Matrix3.Reflection method that builds a reflection matrix for a mirror plane that passes through the origin. See sample ReflectionMatrix().
* Added the Matrix4.Reflection method that builds a reflection matrix for a mirror plane that passes through an arbitrary point. See sample ReflectionMatrix().
* Corrected the comments in the Ellipse.Center property.
* (fixed) In the Ellipse.SetAxis method the validity checks must be performed with the arguments of the method not the actual major and minor axis of the ellipse.

### [2022/04/19]
* Added more GTE classes. See the Samples for GTE classes
* Deleted the SplineVertex class. Now the Spline constructors take two lists: a Vector3 to define the controls points and a double array to define the weights.
* PolygonMesh entities are now capable to handle closed in U and/or V surfaces.

### [2022/04/10]
* Added CalculateTangent for Quadratic and Cubic Bezier curves.
* Added PolygonMesh entity. See PolygonMesh() sample.
* Added the drawing variables SurfU and SurfV.